# slexer

./: .gitignore  CMakeLists.txt  README.md
include/myregex/: myregex.hpp  myregex_status_control.hpp
include/myregex/automaton/: dfa.hpp  nfa.hpp  table.hpp
include/myregex/automaton/base/: state.hpp
include/myregex/builder/: builder.hpp
include/myregex/exceptions/: error.hpp
include/myregex/main/: main.hpp
include/myregex/utilities/: memory.hpp  selector.hpp
include/slexer/: slexer.hpp
include/slexer/buffer/: buffer.hpp
include/slexer/builder/: builder.hpp
include/slexer/exceptions/: exceptions.hpp
include/slexer/main/: main.hpp
include/slexer/token/: token.hpp
include/slexer/tokenstream/: tokenstream.hpp
include/utilities/: memory.hpp  range.hpp  selector.hpp
